Basavaraj S Patil_AccuKnox/wisecow/k8s/wisecow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: patilbasabaraj8747@gmail.com/wisecow:latest
        ports:
        - containerPort: 3000
